[OGE-4689] Per-user ACLs stored in the database (#13)
